Fix the overflow of content caused by large list of friends

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html {
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     height: 100vh;
     margin: 0;
     padding: 0;
